# TIL

./: README.md
0119/: activities.md
Day_0119/: Cargo.toml  README.md
Day_0126/: Cargo.toml  README.md
Day_0126/src/: lifetimes.rs
Day_0210/: Cargo.toml  README.md
Day_0210/src/: err.rs  trait.rs
Day_0216/: Cargo.toml  README.md  index.html  style.css
Day_0216/src/: main.rs
Day_0224/: Cargo.toml  README.md  Rocket.toml
Day_0224/db/: db.sqlite
Day_0224/db/migrations/: 20230223230641_initial-tables.sql
Day_0224/src/: main.rs
